; ModuleID = '/home/carl/AnghaBench/kphp-kdb/copyexec/extr_copyexec-binlog.c_dump_transaction_err.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/copyexec/extr_copyexec-binlog.c_dump_transaction_err.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_copyexec_main_transaction_err = type { i32, i8*, i32 }

@.str = private unnamed_addr constant [34 x i8] c"LEV_COPYEXEC_MAIN_TRANSACTION_ERR\00", align 1
@out = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [9 x i8] c"%d\09%.*s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dump_transaction_err(%struct.lev_copyexec_main_transaction_err* %0) #0 {
  %2 = alloca %struct.lev_copyexec_main_transaction_err*, align 8
  store %struct.lev_copyexec_main_transaction_err* %0, %struct.lev_copyexec_main_transaction_err** %2, align 8
  %3 = call i64 @dump_line_header(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %18

6:                                                ; preds = %1
  %7 = load i32, i32* @out, align 4
  %8 = load %struct.lev_copyexec_main_transaction_err*, %struct.lev_copyexec_main_transaction_err** %2, align 8
  %9 = getelementptr inbounds %struct.lev_copyexec_main_transaction_err, %struct.lev_copyexec_main_transaction_err* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = load %struct.lev_copyexec_main_transaction_err*, %struct.lev_copyexec_main_transaction_err** %2, align 8
  %12 = getelementptr inbounds %struct.lev_copyexec_main_transaction_err, %struct.lev_copyexec_main_transaction_err* %11, i32 0, i32 1
  %13 = load i8*, i8** %12, align 8
  %14 = load %struct.lev_copyexec_main_transaction_err*, %struct.lev_copyexec_main_transaction_err** %2, align 8
  %15 = getelementptr inbounds %struct.lev_copyexec_main_transaction_err, %struct.lev_copyexec_main_transaction_err* %14, i32 0, i32 2
  %16 = load i32, i32* %15, align 8
  %17 = call i32 @fprintf(i32 %7, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32 %10, i8* %13, i32 %16)
  br label %18

18:                                               ; preds = %6, %5
  ret void
}

declare dso_local i64 @dump_line_header(i8*) #1

declare dso_local i32 @fprintf(i32, i8*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
